# ais-manipulation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: config_cleaning.json  config_density.json  config_kalman.json  config_merge.json  config_split.json  config_trips.json
config/colormaps/: colors_1000.txt
config/prev/: config.json  config_syros.json  config_token.json
data/testing/00_original/: input_ais_sample.csv
data/testing/others/: syros.json
docs/figures/: downsampled_data.pgw  raw_data.pgw
src/ais_manipulation/cleaning/: __init__.py  data_cleaning.py
src/ais_manipulation/density/: count_density.py  distance_density.py  export_density_maps.py  get_density.py  time_at_cells.py  time_density.py  vessel_type.py
src/ais_manipulation/file_management/: merge_files.py  split_file.py
src/ais_manipulation/geospatial/: get_grid.py  transform_time.py
src/ais_manipulation/metrics/: distance.py
src/ais_manipulation/tokenization/: tokenize_h3.py
src/mt/: __init__.py
src/mt/cleaning/: data_cleaning.py
src/mt/density/: density_utils.py  export_density_maps.py  get_density.py
src/mt/metrics/: distance.py
src/mt/tokenization/: tokenize_h3.py
src/mt/trips/: find_trips.py
src/mt/utils/: get_grid.py  merge_files.py  split_file.py
src/vesseltrack_tools/cleaning/: data_cleaning.py  kalman_filter.py
src/vesseltrack_tools/density/: count_density.py  distance_density.py  export_density_maps.py  get_density.py  time_density.py
src/vesseltrack_tools/file_management/: merge_files.py
src/vesseltrack_tools/geospatial/: get_grid.py
src/vesseltrack_tools/tokenization/: tokenize_h3.py  transform_h3.py
src/vesseltrack_tools/trips/: find_trips.py
